Added styles changed the structure

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,70 +1,6 @@
-
-.title{
-  margin-top: 50px;
-  font-size: 25px;
-  text-align: center;
-}
-
-.input-Wrapper{
-  margin-top: 15px;
-  text-align: center;
-}
-
-.input{
-  width: 300px;
-  border: 2px solid rgb(68, 67, 67);
-  border-radius: 5px;
-  padding: 5px;
-}
-.easy-wrapper{
-  margin-top: 30px;
+.main-wrapper{
+  padding-top: 100px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items:center;
-  gap: 15px;
-}
-
-
-
-.easy-color{
-  color:rgb(114, 107, 107);
-  font-size: 20px;
-  font-weight: 700;
-  width: 150px;
-  height: 50px;
-  background-color: rgb(136, 133, 133);
-  border-radius: 10px;
-}
-.medium-color{
-  color:rgb(114, 107, 107);
-  font-size: 20px;
-  font-weight: 700;
-  width: 150px;
-  height: 50px;
-  background-color: rgb(136, 133, 133);
-  border-radius: 10px;
-}
-.hard-color{
-  color:rgb(114, 107, 107);
-  font-size: 20px;
-  font-weight: 700;
-  width: 150px;
-  height: 50px;
-  background-color: rgb(136, 133, 133);
-  border-radius: 10px;
-}
-
-
-.red{
-  background-color:red;
-}
-
-.green{
-  background-color:green;
-}
-
-.yellow{
-  background-color:yellow;
-
 }
