--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,4 +3,12 @@
   display: flex;
   justify-content: center;
   align-items:center;
+  flex-direction: column;
+}
+.title {
+  color:rgba(0, 0, 0, 0.807);
+  text-shadow: 1px 1px 2px rgba(6, 173, 234, 0.581);
+  font-size: 25px;
+  text-align: center;
+  font-weight: 700;
 }
