--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div class="main-wrapper">
-     <app-password></app-password>
-</div>
+<main class="main-wrapper">
+
+  <h1 class="title">Test your password strength!</h1>
+  <test-password></test-password>
+
+</main>
