--- a/src/app/components/password-colored/password-colored.component.html
+++ b/src/app/components/password-colored/password-colored.component.html
@@ -3,27 +3,27 @@
     <li
       class="color-section"
       [ngClass]="{
-        red: emptyInput || easy,
-        gray: !emptyInput,
-        yellow: medium,
-        green: hard
+        red: props.emptyInput || props.easy,
+        gray: !props.emptyInput,
+        yellow: props.medium,
+        green: props.hard
       }"
     ></li>
     <li
       class="color-section"
       [ngClass]="{
-        red: emptyInput,
-        gray: !emptyInput,
-        yellow: medium,
-        green: hard
+        red: props.emptyInput,
+        gray: !props.emptyInput,
+        yellow: props.medium,
+        green: props.hard
       }"
     ></li>
     <li
       class="color-section"
       [ngClass]="{
-        red: emptyInput,
-        gray: !emptyInput,
-        green: hard
+        red: props.emptyInput,
+        gray: !props.emptyInput,
+        green: props.hard
       }"
     ></li>
   </ul>
