--- a/src/app/components/password-input/password-input.component.html
+++ b/src/app/components/password-input/password-input.component.html
@@ -9,16 +9,16 @@
       (input)="onInputChange(password)"
     />
 
-    <div class="status short-status" [hidden]="!emptyInput">
+    <div class="status short-status" [hidden]="!props.emptyInput">
       Your password is too short
     </div>
-    <div class="status easy-status" [hidden]="!easy">
+    <div class="status easy-status" [hidden]="!props.easy">
       Your password is too easy
     </div>
-    <div class="status medium-status" [hidden]="!medium">
+    <div class="status medium-status" [hidden]="!props.medium">
       Your password is medium
     </div>
-    <div class="status hard-status" [hidden]="!hard">
+    <div class="status hard-status" [hidden]="!props.hard">
       Your password is realy strong
     </div>
   </form>
