--- a/src/app/components/test-password/test-password.component.html
+++ b/src/app/components/test-password/test-password.component.html
@@ -1,17 +1,12 @@
 <section class="test-field">
   <password-input
     (onChanged) = 'onChanged($event)'
-    [emptyInput] = 'emptyInput'
-    [easy] = 'easy'
-    [medium] = 'medium'
-    [hard] = 'hard' >
+    [props] = '{emptyInput, easy, medium, hard}'
+>
   </password-input>
 
   <password-colored
-    [emptyInput] = 'emptyInput'
-    [easy] = 'easy'
-    [medium] = 'medium'
-    [hard] = 'hard'
+    [props] = '{emptyInput, easy, medium, hard}'
   ></password-colored>
 </section>
 
