--- a/src/app/components/password-input/password-input.component.html
+++ b/src/app/components/password-input/password-input.component.html
@@ -5,8 +5,7 @@
       type="password"
       name="password"
       class="input"
-      [(ngModel)]="password"
-      (input)="onInputChange(password)"
+      [formControl] = 'password'
     />
 
     <div class="status short-status" [hidden]="!props.emptyInput">
