--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="main-wrapper">
-
-  <h1 class="title">Test your password strength!</h1>
-  <test-password></test-password>
-
+  <header>
+    <h1 class="title">Test your password strength!</h1>
+  </header>
+  <test-password/>
 </main>
